deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reasons-service
  labels:
    app: reasons-service
spec:
  selector:
    app: reasons-service
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
